# 148sp26-spring-2026-final-project-team-8

./: .gitignore  Dockerfile  ECE MAE 148 Week 8 Update - Final.pptx  README.md
finalcar/: oak_view.py  oak_yolo.py
parking_system/: package.xml  setup.py
parking_system/config/: parking_params.yaml  parking_vesc_odom.yaml
parking_system/launch/: parking_auto.launch.py  parking_motor_calibration.launch.py  parking_with_camera.launch.py  parking_with_odom.launch.py  parking_with_rc.launch.py  parking_with_webcam.launch.py
parking_system/parking_system/: launch_helpers.py  oak_detection_node.py  oak_yolo.py  parking_controller_node.py  parking_node.py  rc_keyboard_node.py  smoke_test_roboflow.py
