<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parking_system</name>
  <version>0.0.0</version>
  <description>Camera-based parking tape HSV tuning and debug package.</description>
  <maintainer email="djnighti@ucsd.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vesc_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
